<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="30dp" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/style_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gate_way_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/gate_way"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/result_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ctid_fail" />
        </LinearLayout>
        <TextView
            android:id="@+id/gate_way_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/gate_way_string"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/style_item">

    <Button
        android:id="@+id/eth0_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/eth0_down"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/eth0_down_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/eth0_down_string"
        android:layout_gravity="center"
        android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/style_item">


    <Button
        android:id="@+id/eth0_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:text="@string/eth0_up"/>

    <TextView
        android:id="@+id/eth0_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="@string/eth0_up_string"/>
    </LinearLayout>
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:text="@string/result_string"/>

</LinearLayout>